Some changes in StudentNewsController.java